[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menus/end_game.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/df_24.tres" type="DynamicFont" id=2]

[node name="end_game" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enter_name" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="m_container" type="MarginContainer" parent="enter_name"]
margin_left = 40.0
margin_top = 40.0
margin_right = 760.0
margin_bottom = 410.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vb_container" type="VBoxContainer" parent="enter_name/m_container"]
margin_right = 720.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="lbl_title" type="Label" parent="enter_name/m_container/vb_container"]
margin_right = 720.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "ENTER YOUR NAME"
align = 1

[node name="hsep" type="HSeparator" parent="enter_name/m_container/vb_container"]
margin_top = 37.0
margin_right = 720.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="enter_name/m_container/vb_container"]
margin_top = 137.0
margin_right = 720.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="txt_name" type="TextEdit" parent="enter_name/m_container/vb_container/CenterContainer"]
margin_right = 250.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_readonly = Color( 0, 1, 0, 1 )
text = "CARLOS"

[node name="hsep2" type="HSeparator" parent="enter_name/m_container/vb_container"]
margin_top = 237.0
margin_right = 720.0
margin_bottom = 333.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="lbl_continue" type="Label" parent="enter_name/m_container/vb_container"]
margin_top = 337.0
margin_right = 720.0
margin_bottom = 370.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "PRESS ENTER TO CONTINUE"
align = 1

[node name="scores" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
